<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Fondo del logo de la empresa-->
    <LinearLayout
        android:id="@+id/logoBanner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:background="@drawable/linear_gradiant"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_night"
            android:contentDescription="@string/descripcionImg"/>

    </LinearLayout>

    <!--Formulario para registrarse-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/logoBanner">

        <!--Informacion Personal-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/title_informacion_personal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <!--Campo de nombres y apellidos completos-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Input nombres completos-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/subtitle_nombres"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lytNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/icon_error"
                    app:boxStrokeErrorColor="@color/errorColor"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtNombre"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!--Input apellidos completos-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/subtitle_apellidos"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lytApellido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/icon_error"
                    app:boxStrokeErrorColor="@color/errorColor"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtApellido"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <!--Input dni-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_dni"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytdni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/icon_dni"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/icon_error"
            app:boxStrokeErrorColor="@color/errorColor"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtdni"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Input correo electronico-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_correo"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/icon_error"
            app:boxStrokeErrorColor="@color/errorColor"
            app:startIconDrawable="@drawable/icon_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCorreo"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Input nro de celular-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_numero_phone"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:text="@string/codigo_postal"
                    android:focusable="false"
                    android:inputType="none"
                    android:clickable="false"
                    android:cursorVisible="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lytPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/icon_phone"
                app:counterEnabled="true"
                app:counterMaxLength="9"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/icon_error"
                app:boxStrokeErrorColor="@color/errorColor"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPhone"
                    android:layout_width="295dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/gifImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/gif"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSiguiente"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                android:backgroundTint="@color/DineColorPrimary"
                android:text="@string/title_for_button_siguiente"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>