<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Fondo del logo de la empresa-->
    <LinearLayout
        android:id="@+id/logoBanner"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center"
        android:background="@drawable/linear_gradiant"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_night"
            android:contentDescription="@string/descripcionImg"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoBanner">

        <!--Botones para login y register-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/Transparent"
            android:text="@string/login"
            android:textSize="15sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/icon_login_negro"
            app:iconGravity="textStart"
            app:iconPadding="20dp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:iconSize="30dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/Transparent"
            android:text="@string/register"
            android:textSize="15sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/icon_register_negro"
            app:iconGravity="textStart"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:iconPadding="20dp"
            android:layout_marginTop="10dp"
            app:iconSize="30dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/Transparent"
            android:text="@string/loginGoogle"
            android:textSize="15sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/icon_google"
            app:iconTint="@null"
            style="@style/Widget.Material3.Button.TextButton"
            app:iconGravity="textStart"
            app:iconPadding="20dp"
            app:iconSize="30dp"/>

        <ImageView
            android:id="@+id/gifImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/gif"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/pantallaOscura"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/fondo_oscuro_transparente">

        <ImageView
            android:id="@+id/gifGrande"
            android:layout_width="300dp"
            android:layout_height="550dp"
            android:layout_gravity="end"
            android:translationY="200dp"
            android:contentDescription="@string/gif"/>

        <TextView
            android:id="@+id/globoTexto"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/globo_texto"
            android:text="Putos"
            android:fontFamily="@font/comingsoon_regular"
            android:maxLines="3"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:translationX="50dp"
            android:translationY="100dp"
            android:padding="30dp" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>